[gd_scene load_steps=3 format=3 uid="uid://fsr1bmxmci6y"]

[ext_resource type="Script" path="res://scenes/InventoryItem.gd" id="1_oju2i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bplyb"]
bg_color = Color(0.231373, 0.231373, 0.231373, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.501961, 0.501961, 0.501961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="InventoryItem" type="Panel"]
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bplyb")
script = ExtResource("1_oju2i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Item Name"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0.768627, 0.768627, 1)
theme_override_font_sizes/font_size = 11
text = "Item description."
autowrap_mode = 3

[node name="UseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "Use"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
